--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="author" content="Victor">
         
         <title>Victor Ramirez</title>
+        <link rel="stylesheet" href="css/index.css"/>
     </head>
     <body>
         <h1>Victor Ramirez</h1>
@@ -52,7 +53,7 @@
         
         <section id="messages">
             <h2>Messages</h2>
-            <ul></ul>
+                <ul></ul>
         </section>
 
         <footer>
