--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                 <ul></ul>
             </div>
         </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul></ul>
+        </section>
 
         <section>
             <h2>Connect</h2>
